--- a/res/layout/map.xml
+++ b/res/layout/map.xml
@@ -1,17 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- ROBIN - from res/layout/main.xml -->
 <LinearLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  android:layout_width="fill_parent"
-  android:layout_height="fill_parent">
-  
-  <com.google.android.maps.MapView
-  				 android:id="@+id/map_view"
-                 android:layout_width="fill_parent"
-                 android:layout_height="fill_parent"
-                 android:enabled="true"
- 				 android:clickable="true"
-                 android:apiKey="03n3fWJh9uBTZBBsJ6AfpbuPbFE8rdl745MCy4w"
-                 />
+	android:layout_width="fill_parent"
+	android:layout_height="fill_parent"
+	android:orientation="vertical"
+	xmlns:android="http://schemas.android.com/apk/res/android">
+
+
+	
+	<LinearLayout
+	android:layout_marginTop="5px"
+	android:layout_marginBottom="5px"
+	android:layout_width="fill_parent"
+	android:orientation="horizontal" android:layout_height="65px">
+		<Button
+		android:id="@+id/map_create_button"
+		android:text="CREATE"
+		android:typeface="serif" 
+		android:layout_height="65px" android:layout_width="160px" android:textSize="12sp" android:textStyle="bold">
+		</Button>
+		
+		
+		<Button
+		android:id="@+id/map_story_button"
+		android:text="ADD STORY"
+		android:typeface="serif"  
+		android:clickable="true" android:layout_height="65px" android:layout_width="160px" android:textSize="12sp" android:textStyle="bold">
+		</Button>
+		<Button
+		android:id="@+id/map_community_button"
+		android:text="COMMUNITY"
+		android:typeface="serif" 
+		android:layout_height="65px" android:layout_width="160px" android:textSize="12sp" android:textStyle="bold">
+		</Button>
+	</LinearLayout>
+	<AbsoluteLayout android:layout_height="wrap_content" android:layout_width="fill_parent">
+	
+	<com.google.android.maps.MapView android:id="@+id/map_view" android:layout_width="fill_parent" android:clickable="true" android:apiKey="0DCXfmwsB5lNl4mg3T70vftbT6J5ZLaQFBXB15g" android:layout_height="700px" />
   <!--  kubrick debug 03n3fWJh9uBSVBCM65cdV1TZ-n4c0ZXdG1KG27A -->
   <!--  cmg           03n3fWJh9uBTZBBsJ6AfpbuPbFE8rdl745MCy4w -->
+  <!--  ROBIN         0DCXfmwsB5lNl4mg3T70vftbT6J5ZLaQFBXB15g -->	
+	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="1900" android:textStyle="bold" android:typeface="serif" android:layout_y="5px" android:id="@+id/YearTextView" android:textSize="30dip" android:layout_x="350px" android:textColor="#ffffff" android:background="#ff000000" android:padding="10px">
+	</TextView>
+	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="bold" android:typeface="serif" android:textColor="#ffffff" android:background="#ff000000" android:padding="10px" android:text="You are in: -" android:layout_x="0px" android:textSize="20dip" android:layout_y="550px" android:id="@+id/ZoneTextView">
+	</TextView>
+	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="bold" android:typeface="serif" android:textSize="20dip" android:layout_y="600px" android:background="#ffffffff" android:textColor="#ff000000" android:text="attrib:" android:padding="9px" android:layout_x="215px">
+	</TextView>
+	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="bold" android:typeface="serif" android:layout_x="0px" android:layout_y="600px" android:background="#ffffffff" android:textColor="#ff000000" android:text="members:" android:textSize="15dip" android:padding="12px">
+	</TextView>
+	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="bold" android:typeface="serif" android:layout_y="600px" android:background="#ffffffff" android:textColor="#ff000000" android:textSize="15dip" android:padding="12px" android:layout_x="143px" android:text="-" android:id="@+id/MemberCntTextView">
+	</TextView>
+	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="bold" android:typeface="serif" android:textSize="20dip" android:layout_y="600px" android:textColor="#ff000000" android:text="-" android:padding="9px" android:layout_x="332px" android:background="#ff00aeef" android:id="@+id/HealthTextView">
+	</TextView>
+	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="bold" android:typeface="serif" android:textSize="20dip" android:layout_y="600px" android:textColor="#ff000000" android:text="-" android:padding="9px" android:layout_x="369px" android:background="#ffFFCC00" android:id="@+id/WealthTextView">
+	</TextView>
+	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="bold" android:typeface="serif" android:textSize="20dip" android:layout_y="600px" android:textColor="#ff000000" android:text="-" android:padding="9px" android:layout_x="406px" android:background="#ffFF6633" android:id="@+id/BrainsTextView">
+	</TextView>
+	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="bold" android:typeface="serif" android:textSize="20dip" android:layout_y="600px" android:textColor="#ff000000" android:text="-" android:padding="9px" android:layout_x="443px" android:background="#ff999933" android:id="@+id/ActionTextView">
+	</TextView>
+
+</AbsoluteLayout>
+	
+
+
+
 </LinearLayout>
+
