--- a/res/layout/submit_story.xml
+++ b/res/layout/submit_story.xml
@@ -1,25 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <LinearLayout
-android:id="@+id/main_layout"
 android:layout_width="fill_parent"
 android:layout_height="fill_parent"
 android:orientation="vertical"
 xmlns:android="http://schemas.android.com/apk/res/android"
 >
 <ImageView
-android:id="@+id/title_img"
 android:layout_width="fill_parent"
 android:layout_height="40px"
 android:src="@drawable/ep_title">
 </ImageView>
 <TableLayout
-android:id="@+id/form_layout"
 android:layout_width="fill_parent"
 android:layout_height="wrap_content"
 android:orientation="vertical"
 >
 <TableRow
-android:id="@+id/title_row"
 android:layout_width="fill_parent"
 android:layout_height="wrap_content"
 android:layout_marginTop="10px"
@@ -29,7 +25,6 @@ android:layout_marginRight="40px"
 android:orientation="horizontal"
 >
 <TextView
-android:id="@+id/story_title"
 android:layout_height="wrap_content"
 android:layout_marginTop="5px"
 
@@ -39,7 +34,6 @@ android:layout_width="fill_parent">
 </TextView>
 </TableRow>
 <TableRow
-android:id="@+id/title_input_row"
 android:layout_width="fill_parent"
 android:layout_height="wrap_content"
 android:orientation="horizontal"
@@ -47,16 +41,15 @@ android:layout_marginLeft="40px"
 android:layout_marginRight="40px"
 >
 <EditText
-android:id="@+id/title_input"
+android:id="@+id/submit_story_title_edit_text"
 android:padding="5px"
-android:text="Add Title"
+android:text=""
 android:typeface="serif"
 android:layout_height="70px"
 android:layout_width="380px">
 </EditText>
 </TableRow>
 <TableRow
-android:id="@+id/desc_row"
 android:layout_width="fill_parent"
 android:layout_height="wrap_content"
 android:orientation="horizontal"
@@ -64,7 +57,6 @@ android:layout_marginLeft="40px"
 android:layout_marginRight="40px"
 >
 <TextView
-android:id="@+id/story_desc"
 android:layout_width="fill_parent"
 android:layout_height="wrap_content"
 android:text="Description" 
@@ -73,7 +65,6 @@ android:layout_marginBottom="10px">
 </TextView>
 </TableRow>
 <TableRow
-android:id="@+id/desc_input_row"
 android:layout_width="fill_parent"
 android:layout_height="wrap_content"
 android:orientation="horizontal"
@@ -81,16 +72,15 @@ android:layout_marginLeft="40px"
 android:layout_marginRight="40px"
 >
 <EditText
-android:id="@+id/desc_input"
+android:id="@+id/submit_story_description_edit_text"
 android:padding="5px"
 android:typeface="serif" 
 android:layout_height="200px" 
 android:layout_width="fill_parent" 
-android:text="Add Description">
+android:text="">
 </EditText>
 </TableRow>
 <TableRow
-android:id="@+id/attributes_row"
 android:layout_width="fill_parent"
 android:layout_height="wrap_content"
 android:layout_marginLeft="40px"
@@ -98,7 +88,6 @@ android:layout_marginRight="40px"
 android:orientation="horizontal"
 >
 <TextView
-android:id="@+id/attributes"
 android:layout_width="fill_parent"
 android:layout_height="wrap_content"
 android:layout_marginTop="10px"
@@ -127,7 +116,7 @@ android:text="Attributes"
 	    	
 	    	
 		<SeekBar android:layout_width="225px"
-	    	android:layout_height="wrap_content"
+	    	android:layout_height="wrap_content" android:max="10" android:progress="5"
 			android:layout_weight="1" android:paddingLeft="10px" android:scrollbarStyle="insideInset" android:id="@+id/HealthSeekBar">
 		</SeekBar>
 		
@@ -149,7 +138,7 @@ android:text="Attributes"
 	    	
 	    	
 		<SeekBar android:layout_width="225px"
-	    	android:layout_height="wrap_content"
+	    	android:layout_height="wrap_content" android:max="10" android:progress="5"
 			android:layout_weight="1" android:paddingLeft="10px" android:id="@+id/WealthSeekBar">
 		</SeekBar>
 		
@@ -171,7 +160,7 @@ android:text="Attributes"
 	    	
 	    	
 		<SeekBar android:layout_width="225px"
-	    	android:layout_height="wrap_content"
+	    	android:layout_height="wrap_content" android:max="10" android:progress="5"
 			android:layout_weight="1" android:paddingLeft="10px" android:id="@+id/BrainsSeekBar">
 		</SeekBar>
 		
@@ -193,7 +182,7 @@ android:text="Attributes"
 	    	
 	    	
 		<SeekBar android:layout_width="225px"
-	    	android:layout_height="wrap_content"
+	    	android:layout_height="wrap_content" android:max="10" android:progress="5"
 			android:layout_weight="1" android:paddingLeft="10px" android:id="@+id/ActionSeekBar">
 		</SeekBar>
 		
@@ -205,7 +194,7 @@ android:text="Attributes"
     	android:layout_marginLeft="35px"
     	android:layout_marginTop="20px">
 	    <Button
-android:id="@+id/submit_story_button"
+android:id="@+id/submit_story_submit_button"
 android:layout_width="285px"
 android:text="Submit Story"
 android:typeface="serif"
@@ -215,7 +204,7 @@ android:layout_height="fill_parent">
 android:layout_width="fill_parent"
 android:text="Cancel"
 android:typeface="serif"
-android:layout_height="fill_parent" android:id="@+id/cancel_button">
+android:layout_height="fill_parent" android:id="@+id/submit_story_cancel_button">
 </Button>
 		
     </LinearLayout>
