--- a/res/layout/map.xml
+++ b/res/layout/map.xml
@@ -40,6 +40,9 @@
   <!--  kubrick debug 03n3fWJh9uBSVBCM65cdV1TZ-n4c0ZXdG1KG27A -->
   <!--  cmg           03n3fWJh9uBTZBBsJ6AfpbuPbFE8rdl745MCy4w -->
   <!--  ROBIN         0DCXfmwsB5lNl4mg3T70vftbT6J5ZLaQFBXB15g -->	
+  <!--  tom			  0-oOTjjhHTq0hnGzZdOFPUAe8Cj5imH0c0QMqZw-->
+  	<TextView android:layout_width="wrap_content" android:width="320px" android:visibility="invisible" android:layout_height="wrap_content" android:text="" android:textStyle="bold" android:typeface="serif" android:layout_y="5px" android:id="@+id/ContentTextView" android:textSize="15dip" android:layout_x="20px" android:textColor="#ffffff" android:background="#ff000000" android:padding="10px">
+	</TextView>
 	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="1900" android:textStyle="bold" android:typeface="serif" android:layout_y="5px" android:id="@+id/YearTextView" android:textSize="30dip" android:layout_x="350px" android:textColor="#ffffff" android:background="#ff000000" android:padding="10px">
 	</TextView>
 	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="bold" android:typeface="serif" android:textColor="#ffffff" android:background="#ff000000" android:padding="10px" android:text="You are in: -" android:layout_x="0px" android:textSize="20dip" android:layout_y="550px" android:id="@+id/ZoneTextView">
