--- a/res/layout/map.xml
+++ b/res/layout/map.xml
@@ -10,9 +10,8 @@
 	
 	<LinearLayout
 	android:layout_marginTop="5px"
-	android:layout_marginBottom="5px"
 	android:layout_width="fill_parent"
-	android:orientation="horizontal" android:layout_height="65px">
+	android:orientation="horizontal" android:layout_height="65px" android:layout_marginBottom="0px">
 		<Button
 		android:id="@+id/map_create_button"
 		android:text="CREATE"
@@ -36,28 +35,29 @@
 	</LinearLayout>
 	<AbsoluteLayout android:layout_height="wrap_content" android:layout_width="fill_parent">
 	
-	<com.google.android.maps.MapView android:id="@+id/map_view" android:layout_width="fill_parent" android:clickable="true" android:apiKey="03n3fWJh9uBTZBBsJ6AfpbuPbFE8rdl745MCy4w" android:layout_height="700px" />
+	<com.google.android.maps.MapView android:id="@+id/map_view" android:layout_width="fill_parent" android:clickable="true" android:apiKey="03n3fWJh9uBTZBBsJ6AfpbuPbFE8rdl745MCy4w" android:layout_height="625px"/>
   <!--  kubrick debug 03n3fWJh9uBSVBCM65cdV1TZ-n4c0ZXdG1KG27A -->
   <!--  cmg           03n3fWJh9uBTZBBsJ6AfpbuPbFE8rdl745MCy4w -->
   <!--  ROBIN         0DCXfmwsB5lNl4mg3T70vftbT6J5ZLaQFBXB15g -->	
-	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="1900" android:textStyle="bold" android:typeface="serif" android:layout_y="5px" android:id="@+id/YearTextView" android:textSize="30dip" android:layout_x="350px" android:textColor="#ffffff" android:background="#ff000000" android:padding="10px">
+	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="bold" android:typeface="serif" android:layout_y="5px" android:id="@+id/YearTextView" android:textSize="30dip" android:textColor="#ffffff" android:padding="5px" android:layout_x="365px" android:text="1890" android:background="#3f000000">
 	</TextView>
-	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="bold" android:typeface="serif" android:textColor="#ffffff" android:background="#ff000000" android:padding="10px" android:text="You are in: -" android:layout_x="0px" android:textSize="20dip" android:layout_y="550px" android:id="@+id/ZoneTextView">
+	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="bold" android:typeface="serif" android:textColor="#ffffff" android:background="#ff000000" android:text="You are in: -" android:layout_x="0px" android:textSize="20dip" android:id="@+id/ZoneTextView" android:paddingLeft="10px" android:layout_y="625px">
 	</TextView>
-	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="bold" android:typeface="serif" android:textSize="20dip" android:layout_y="600px" android:background="#ffffffff" android:textColor="#ff000000" android:text="attrib:" android:padding="9px" android:layout_x="215px">
+	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="bold" android:typeface="serif" android:textSize="20dip" android:background="#ffffffff" android:textColor="#ff000000" android:text="attrib:" android:padding="9px" android:layout_x="215px" android:layout_y="660px">
 	</TextView>
-	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="bold" android:typeface="serif" android:layout_x="0px" android:layout_y="600px" android:background="#ffffffff" android:textColor="#ff000000" android:text="members:" android:textSize="15dip" android:padding="12px">
+	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="bold" android:typeface="serif" android:layout_x="0px" android:background="#ffffffff" android:textColor="#ff000000" android:text="members:" android:textSize="15dip" android:padding="12px" android:layout_y="660px">
 	</TextView>
-	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="bold" android:typeface="serif" android:layout_y="600px" android:background="#ffffffff" android:textColor="#ff000000" android:textSize="15dip" android:padding="12px" android:layout_x="143px" android:text="-" android:id="@+id/MemberCntTextView">
+	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="bold" android:typeface="serif" android:background="#ffffffff" android:textColor="#ff000000" android:textSize="15dip" android:padding="12px" android:layout_x="143px" android:text="-" android:id="@+id/MemberCntTextView" android:layout_y="660px">
 	</TextView>
-	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="bold" android:typeface="serif" android:textSize="20dip" android:layout_y="600px" android:textColor="#ff000000" android:text="-" android:padding="9px" android:layout_x="332px" android:background="#ff00aeef" android:id="@+id/HealthTextView">
+	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="bold" android:typeface="serif" android:textSize="20dip" android:textColor="#ff000000" android:text="-" android:padding="9px" android:layout_x="332px" android:background="#ff00aeef" android:id="@+id/HealthTextView" android:layout_y="660px">
 	</TextView>
-	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="bold" android:typeface="serif" android:textSize="20dip" android:layout_y="600px" android:textColor="#ff000000" android:text="-" android:padding="9px" android:layout_x="369px" android:background="#ffFFCC00" android:id="@+id/WealthTextView">
+	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="bold" android:typeface="serif" android:textSize="20dip" android:textColor="#ff000000" android:text="-" android:padding="9px" android:layout_x="369px" android:background="#ffFFCC00" android:id="@+id/WealthTextView" android:layout_y="660px">
 	</TextView>
-	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="bold" android:typeface="serif" android:textSize="20dip" android:layout_y="600px" android:textColor="#ff000000" android:text="-" android:padding="9px" android:layout_x="406px" android:background="#ffFF6633" android:id="@+id/BrainsTextView">
+	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="bold" android:typeface="serif" android:textSize="20dip" android:textColor="#ff000000" android:text="-" android:padding="9px" android:layout_x="406px" android:background="#ffFF6633" android:id="@+id/BrainsTextView" android:layout_y="660px">
 	</TextView>
-	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="bold" android:typeface="serif" android:textSize="20dip" android:layout_y="600px" android:textColor="#ff000000" android:text="-" android:padding="9px" android:layout_x="443px" android:background="#ff999933" android:id="@+id/ActionTextView">
+	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="bold" android:typeface="serif" android:textSize="20dip" android:textColor="#ff000000" android:text="-" android:padding="9px" android:layout_x="443px" android:background="#ff999933" android:id="@+id/ActionTextView" android:layout_y="660px">
 	</TextView>
+
 
 </AbsoluteLayout>
 	
