--- a/res/layout/community.xml
+++ b/res/layout/community.xml
@@ -3,11 +3,11 @@
     android:id="@+id/gridview"
     android:layout_width="fill_parent" 
     android:layout_height="fill_parent"
-    android:columnWidth="90dp"
+    android:columnWidth="130px"
     android:numColumns="auto_fit"
-    android:verticalSpacing="10dp"
-    android:horizontalSpacing="10dp"
+    android:verticalSpacing="10px"
+    android:horizontalSpacing="10px"
     android:stretchMode="columnWidth"
-    android:gravity="center"
+    android:gravity="fill"
+    android:scrollbars="vertical"
 />
-
