--- a/res/layout/event_dialogue.xml
+++ b/res/layout/event_dialogue.xml
@@ -40,7 +40,8 @@
           android:layout_height="fill_parent"
           android:layout_marginLeft="20px"
            android:layout_marginRight="20px"
-          android:textColor="#ff000000" android:id="@+id/description" android:textSize="15dip"/>
+           android:scrollbars="vertical"
+          android:textColor="#ff000000" android:id="@+id/description" android:textSize="20dip"/>
  
 
   </LinearLayout>
