(from lobbyservice) show existing reservations in lobby client

--- a/assets/game.css
+++ b/assets/game.css
@@ -66,6 +66,15 @@ body {
 	font-size: 14px;
 	font-family: sans-serif;
 	margin-bottom: 1px;
+	margin-top: 1px;
+}
+.listTable h4 {
+	color: #ffffff;
+	font-size: 12px;
+	font-family: sans-serif;
+	font-weight: bold; 
+	margin-bottom: 1px;
+	margin-top: 1px;
 }
 
 .listTable p {
