--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -2,6 +2,7 @@
 <PreferenceScreen
   xmlns:android="http://schemas.android.com/apk/res/android" android:title="Exploding Places Preferences">
 <EditTextPreference android:key="playerName" android:title="Player Name" android:summary="In-game name of player"></EditTextPreference><EditTextPreference android:summary="URL of the game server" android:key="serverUrl" android:title="Server URL" android:enabled="true" android:selectable="true"></EditTextPreference>
+<EditTextPreference android:summary="Server tag identifying game(s)" android:key="gameTag" android:title="Game Tag" android:enabled="true" android:selectable="true"></EditTextPreference>
 <CheckBoxPreference android:key="restartClient" android:title="Restart Client" android:summary="Restart client when next visited"></CheckBoxPreference>
 
 <CheckBoxPreference android:key="shutdownClient" android:title="Shut down client" android:summary="Shut down client when next visited"></CheckBoxPreference><EditTextPreference android:key="clientId" android:title="Device ID" android:summary="Unique device ID"></EditTextPreference>
