--- a/res/layout/map.xml
+++ b/res/layout/map.xml
@@ -48,7 +48,7 @@
   	<TextView android:layout_width="wrap_content" android:visibility="invisible"  android:width="320px" android:layout_height="wrap_content" android:text="" android:textStyle="bold" android:typeface="serif" android:layout_y="5px" android:id="@+id/map_message_text_view" android:textSize="15dip" android:layout_x="20px" android:textColor="#ffffff" android:background="#7f000000" android:padding="10px">
 <!-- android:visibility="invisible"  -->
 	</TextView>
-	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="bold" android:typeface="serif" android:layout_y="5px" android:id="@+id/YearTextView" android:textSize="30dip" android:textColor="#ffffff" android:padding="5px" android:layout_x="365px" android:text="1890" android:background="#3f000000">
+	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="bold" android:typeface="serif" android:layout_y="5px" android:id="@+id/YearTextView" android:textSize="30dip" android:textColor="#ffffff" android:padding="5px" android:layout_x="365px" android:text="____" android:background="#3f000000">
 	</TextView>
 	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="bold" android:typeface="serif" android:textColor="#ffffff" android:background="#ff000000" android:text="You are in: -" android:layout_x="0px" android:textSize="20dip" android:id="@+id/ZoneTextView" android:paddingLeft="10px" android:layout_y="625px">
 	</TextView>
